Added gradient descent skeleton.

--- a/feti.ipynb
+++ b/feti.ipynb
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "# Gradient Ascent to find set of hyperparameters which \n",
+    "# Gradient Descent to find set of hyperparameters which \n",
     "# maximize the dissimilarity of the normalized k matrix\n",
     "\n",
     "# starting point\n",
